BTW label vervangen door BTW (21%), zodat dit op de factuur staat

--- a/KoketSite/app/locale/nl_NL/Mage_Reports.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Reports.csv
@@ -118,7 +118,7 @@
 "Tag use","Gebruik van tag"
 "Tags submited by %s","Tags ingestuurd door %s"
 "Tags submitted to %s","Tags ingestuurd naar %s"
-"Tax","BTW"
+"Tax","BTW (21%)"
 "Tax Amount","BTW-bedrag"
 "Title","Titel"
 "Total","Totaal"
