--- a/KoketSite/app/locale/nl_NL/Mage_Strikeiron.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Strikeiron.csv
@@ -34,7 +34,7 @@
 "Strikeiron Config","Strikeiron Configuratie"
 "Strikeiron Section","Strikeiron Sectie"
 "Strikeiron foreign exchange rate is disabled",""
-"Tax","BTW"
+"Tax","BTW (21%)"
 "There is an error in retrieving tax rate. Please contact us",""
 "There is an error in verifying an email. Please contact us.",""
 "There is no more hits remaining for the foreign Exchange Rate Service.",""
