--- a/KoketSite/locale/nl_NL/Mage_Adminhtml.csv
+++ b/KoketSite/locale/nl_NL/Mage_Adminhtml.csv
@@ -816,7 +816,7 @@
 "Tag was successfully saved","Tag is met succes verwijderd"
 "Tags","Tags"
 "Target Path","Doelpad"
-"Tax","BTW"
+"Tax","BTW (21%)"
 "Tb","Tb"
 "Template","Sjabloon"
 "Template Content","Template inhoud"
