--- a/KoketSite/locale/nl_NL/Mage_Catalog.csv
+++ b/KoketSite/locale/nl_NL/Mage_Catalog.csv
@@ -510,7 +510,7 @@
 "System","Systeem"
 "System Properties","Systeemeigenschappen"
 "Tag Name","Tag-naam"
-"Tax","BTW"
+"Tax","BTW (21%)"
 "Text","Tekst"
 "Text Area","Tekstvak"
 "Text Field","Tekstveld"
