--- a/KoketSite/locale/nl_NL/Mage_Rss.csv
+++ b/KoketSite/locale/nl_NL/Mage_Rss.csv
@@ -46,7 +46,7 @@
 "Subtotal","Subtotaal"
 "Summary of review: %s <br/>","Samenvatting van review: %s<br />"
 "Tags Products","Product-tags"
-"Tax","BTW"
+"Tax","BTW (21%)"
 "There are no Rss Feeds","Er zijn geen RSS feeds"
 "There are no Rss Feeds.","Er zijn geen RSS feeds."
 "To:","Tot:"
