--- a/KoketSite/locale/nl_NL/Mage_Tax.csv
+++ b/KoketSite/locale/nl_NL/Mage_Tax.csv
@@ -96,7 +96,7 @@
 "Sort Order","Sorteervolgorde"
 "State","Provincie"
 "State/Region","Provincie"
-"Tax","BTW"
+"Tax","BTW (21%)"
 "Tax Based On","BTW gebasseerd op"
 "Tax Class for Shipping","BTW-groep voor verzending"
 "Tax Classes","BTW-tariefgroepen"
