--- a/KoketSite/app/locale/nl_NL/Mage_Paypal.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Paypal.csv
@@ -94,3 +94,8 @@
 "What is this?","Wat is dit?"
 "You will be redirected to Paypal in a few seconds.","Over een paar seconden wordt u doorgestuurd naar PayPal."
 "Your billing address will be ignored and you will be redirected to PayPal UK website","Uw factuuradres zal worden genegeerd en u wordt doorgestuurd naar de PayPal UK website"
+"Please confirm your addresses","Verifieer of dit het juiste adres is aub."
+"Same as shipping","Hetzelfde als het leveradres"
+"Update Order Data","Gegevens Updaten"
+"What is PayPal?"," Wat is PayPal?"
+"You will be redirected to the PayPal website.","Je wordt doorverwezen naar de PayPal website."
